--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "tronweb": "4.0.1",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
-    "vue3-clipboard": "^1.0.0"
+    "vue3-clipboard": "^1.0.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
