--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "qrcode-vue3": "^1.4.17",
     "tronweb": "4.0.1",
     "vue": "^3.2.47",
+    "vue-qrcode-reader": "^3.1.6",
     "vue-router": "^4.1.6",
     "vue3-clipboard": "^1.0.0",
+    "vue3-qr-reader": "^1.0.0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
